--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -189,7 +189,7 @@ ENUM_ALTERNATIVETITLETYPE_MATHML = MathML
 
 ENUM_ALTERNATIVETITLETYPE_OTHER = Andere
 
-ENUM_ALTERNATIVETITLETYPE_SUBTITLE = [NEW] Untertitel
+ENUM_ALTERNATIVETITLETYPE_SUBTITLE = Untertitel
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
@@ -227,7 +227,7 @@ ENUM_CONTENTCATEGORY_supplementary-material = Erg\u00E4nzendes Material
 
 ENUM_CONTENTCATEGORY_table-of-contents = Inhaltsverzeichnis
 
-ENUM_CREATORROLE_ACTOR = [NEW] Schauspieler/in
+ENUM_CREATORROLE_ACTOR = Schauspieler
 
 ENUM_CREATORROLE_ADVISOR = Ratgeber
 
@@ -237,13 +237,13 @@ ENUM_CREATORROLE_ARTIST = K\u00FCnstler
 
 ENUM_CREATORROLE_AUTHOR = Autor
 
-ENUM_CREATORROLE_CINEMATOGRAPHER = [NEW] Kameramann/frau
+ENUM_CREATORROLE_CINEMATOGRAPHER = Kameramann
 
 ENUM_CREATORROLE_COMMENTATOR = Kommentator
 
 ENUM_CREATORROLE_CONTRIBUTOR = Beitragender
 
-ENUM_CREATORROLE_DIRECTOR = [NEW] Regisseur
+ENUM_CREATORROLE_DIRECTOR = Regisseur
 
 ENUM_CREATORROLE_EDITOR = Herausgeber
 
@@ -257,11 +257,11 @@ ENUM_CREATORROLE_PAINTER = Maler
 
 ENUM_CREATORROLE_PHOTOGRAPHER = Fotograf
 
-ENUM_CREATORROLE_PRODUCER = [NEW] Produzent
+ENUM_CREATORROLE_PRODUCER = Produzent
 
 ENUM_CREATORROLE_REFEREE = Gutachter
 
-ENUM_CREATORROLE_SOUND_DESIGNER = [NEW] Tontechniker
+ENUM_CREATORROLE_SOUND_DESIGNER = Tontechniker
 
 ENUM_CREATORROLE_TRANSCRIBER = Transkribierer
 
@@ -374,7 +374,7 @@ ENUM_GENRE_ENCYCLOPEDIA = Lexikon
 
 ENUM_GENRE_FESTSCHRIFT = Festschrift
 
-ENUM_GENRE_FILM = [NEW] Film
+ENUM_GENRE_FILM = Film
 
 ENUM_GENRE_HANDBOOK = Handbuch
 
@@ -463,7 +463,7 @@ ENUM_IDENTIFIERTYPE_PMID = PMID
 
 ENUM_IDENTIFIERTYPE_PND = PND
 
-ENUM_IDENTIFIERTYPE_REPORT_NR = [NEW] Reportnr.
+ENUM_IDENTIFIERTYPE_REPORT_NR = Reportnr.
 
 ENUM_IDENTIFIERTYPE_SSRN = SSRN
 
@@ -573,7 +573,7 @@ ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PRIVATE = privat
 
 ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PUBLIC = \u00F6ffentlich
 
-ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_RESTRICTED = beschr\u00E4nkt
+ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_AUDIENCE = eingeschr\u00E4nkt
 
 ENUM_SELECTMULTIPLEITEMS_DESELECT_ALL = Keine ausw\u00E4hlen
 
@@ -610,7 +610,7 @@ EasySubmission = Einfache Eingabe
 
 EasySubmissionPage = Einfache Eingabe
 
-EasySubmission_lblImportMetadata = [NEW] Daten abholen
+EasySubmission_lblImportMetadata = Daten abholen
 
 EditItemPage = Datensatz bearbeiten
 
@@ -930,7 +930,7 @@ List_SelectItem = Selektieren
 
 List_ShortView = Alle zuklappen
 
-List_lastItem = (neu) vorherige Publikation
+List_lastItem = vorherige Publikation
 
 List_lblAddToBasket = ZUR ABLAGE HINZUF\u00DCGEN
 
@@ -978,7 +978,7 @@ List_lkShow = Anschauen
 
 List_lkToggleAll = Auswahl umkehren\u0009
 
-List_nextItem = (neu) n\u00E4chste Publikation
+List_nextItem = n\u00E4chste Publikation
 
 LocalTagsPage = Lokale Tags bearbeiten
 
@@ -2037,20 +2037,20 @@ adv_search_lblChkType_publishedpr = im Druck publiziert
 
 adv_search_lblChkType_submitted = eingereicht
 
-adv_search_lblClassification = [NEW] Klassifikation
+adv_search_lblClassification = Klassifikation
 
 #Event
 adv_search_lblEventInvited = Eingeladen
 
-adv_search_lblFile = [NEW] Dateien
+adv_search_lblFile = Dateien
 
-adv_search_lblFileAvailable = [NEW] Dateien
+adv_search_lblFileAvailable = mit Datei(en)
 
-adv_search_lblFileAvailable_NO = [NEW] Nein
+adv_search_lblFileAvailable_NO = Nein
 
-adv_search_lblFileAvailable_WHATEVER = [NEW] Egal
+adv_search_lblFileAvailable_WHATEVER = -
 
-adv_search_lblFileAvailable_YES = [NEW] Ja
+adv_search_lblFileAvailable_YES = Ja
 
 #Date
 adv_search_lblFrom = Von
@@ -2062,7 +2062,7 @@ adv_search_lblLanguage = Sprache der Publikation
 #language
 adv_search_lblLanguageTerm = Sprache der Publikation
 
-adv_search_lblLocatorAvailable = [NEW] Ext. Referenzen
+adv_search_lblLocatorAvailable = mit ext. Referenzen
 
 adv_search_lblRgbAny = Alle Felder
 
@@ -2103,16 +2103,16 @@ adv_search_lblSearchPerson_translator = \u00DCbersetzer
 #Generic
 adv_search_lblSearchTerm = Suchbegriff:
 
-adv_search_lblSourceJournal = [NEW] Zeitschrift
+adv_search_lblSourceJournal = Zeitschrift
 
 adv_search_lblTo = Bis
 
 #LogicOperator
-adv_search_logicop_and = Und
+adv_search_logicop_and = UND
 
-adv_search_logicop_not = Nicht
+adv_search_logicop_not = NICHT
 
-adv_search_logicop_or = Oder
+adv_search_logicop_or = ODER
 
 #
 # Advanced Search
@@ -2493,7 +2493,7 @@ item_date-submitted = Eingereicht
 
 item_degree = Abschluss
 
-item_film_duration = [NEW] Dauer
+item_film_duration = Filmdauer
 
 item_genre = Genre
 
@@ -2594,9 +2594,9 @@ mpipksDesc = MPI PKS Klassifikation
 
 mpirgDesc = MPI RG Klassifikation
 
-mpis_groupsDesc = [NEW] MPIS Gruppen
+mpis_groupsDesc = MPIS Gruppen
 
-mpis_projectsDesc = [NEW] MPIS Projekte
+mpis_projectsDesc = MPIS Projekte
 
 multipleImport_checkboxRollback = bei Fehlern zur\u00FCcksetzen
 
@@ -2752,7 +2752,7 @@ styleTheme_lblSpecial = Spezial
 
 submission_descEasySubmission = \u00DCber die einfache Eingabe k\u00F6nnen Sie schrittweise Ihren Datensatz beschreiben. Am Ende der Eingabe haben Sie die M\u00F6glichkeit entweder den Datensatz abzuspeichern oder in die ausf\u00FChrliche Eingabemaske zu wechseln um weitere Angaben zu machen.
 
-submission_descImport = [NEW] Mit dieser Funktion kann man Metadaten und Volltext(e) aus anderen Systemen, wie arXiv oder PubMed Central in die eSciDoc Eingabemaske laden.
+submission_descImport = Mit dieser Funktion kann man Metadaten und Volltext(e) aus anderen Systemen, wie arXiv oder PubMed Central in die eSciDoc Eingabemaske laden.
 
 submission_descMultipleImport = Diese Methode erlaubt Ihnen mehrere Items in einem strukturierten Format hochzuladen (z.B. EndNote, BibTex).
 
@@ -2770,13 +2770,13 @@ submission_lblSubmissionStart = Eingabemethode
 
 submission_lnkEasySubmission = EINFACH
 
-submission_lnkImport = [NEW] DATEN ABHOLEN
+submission_lnkImport = DATEN ABHOLEN
 
 submission_lnkImportWorkspace = Import Bereich
 
-submission_lnkMultipleImport = [NEW] IMPORT
+submission_lnkMultipleImport = IMPORT
 
-submission_lnkMultipleImportCapitalized = Massenimport
+submission_lnkMultipleImportCapitalized = Import
 
 submission_lnkNewSubmission = DETAILLIERT
 
