--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -44,7 +44,7 @@ AcceptItem_lnkCancel = Cancel
 
 AdvancedSearchPage = Advanced Search
 
-AdvancedSearchPageOld = [NEW] Advanced Search
+AdvancedSearchPageOld = Advanced Search
 
 AffiliationDetailAlternativeTitle = Alternative Title
 
@@ -189,7 +189,7 @@ ENUM_ALTERNATIVETITLETYPE_MATHML = MathML
 
 ENUM_ALTERNATIVETITLETYPE_OTHER = Other
 
-ENUM_ALTERNATIVETITLETYPE_SUBTITLE = [NEW] Subtitle
+ENUM_ALTERNATIVETITLETYPE_SUBTITLE = Subtitle
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
@@ -227,7 +227,7 @@ ENUM_CONTENTCATEGORY_supplementary-material = Supplementary material
 
 ENUM_CONTENTCATEGORY_table-of-contents = Table of contents
 
-ENUM_CREATORROLE_ACTOR = [NEW] Actor
+ENUM_CREATORROLE_ACTOR = Actor
 
 ENUM_CREATORROLE_ADVISOR = Advisor
 
@@ -237,13 +237,13 @@ ENUM_CREATORROLE_ARTIST = Artist
 
 ENUM_CREATORROLE_AUTHOR = Author
 
-ENUM_CREATORROLE_CINEMATOGRAPHER = [NEW] Cinematographer
+ENUM_CREATORROLE_CINEMATOGRAPHER = Cinematographer
 
 ENUM_CREATORROLE_COMMENTATOR = Commentator
 
 ENUM_CREATORROLE_CONTRIBUTOR = Contributor
 
-ENUM_CREATORROLE_DIRECTOR = [NEW] Director
+ENUM_CREATORROLE_DIRECTOR = Director
 
 ENUM_CREATORROLE_EDITOR = Editor
 
@@ -257,11 +257,11 @@ ENUM_CREATORROLE_PAINTER = Painter
 
 ENUM_CREATORROLE_PHOTOGRAPHER = Photographer
 
-ENUM_CREATORROLE_PRODUCER = [NEW] Producer
+ENUM_CREATORROLE_PRODUCER = Producer
 
 ENUM_CREATORROLE_REFEREE = Referee
 
-ENUM_CREATORROLE_SOUND_DESIGNER = [NEW] Sound engineer
+ENUM_CREATORROLE_SOUND_DESIGNER = Sound engineer
 
 ENUM_CREATORROLE_TRANSCRIBER = Transcriber
 
@@ -374,7 +374,7 @@ ENUM_GENRE_ENCYCLOPEDIA = Encyclopedia
 
 ENUM_GENRE_FESTSCHRIFT = Festschrift
 
-ENUM_GENRE_FILM = [NEW] Film
+ENUM_GENRE_FILM = Film
 
 ENUM_GENRE_HANDBOOK = Handbook 
 
@@ -463,7 +463,7 @@ ENUM_IDENTIFIERTYPE_PMID = PMID
 
 ENUM_IDENTIFIERTYPE_PND = PND
 
-ENUM_IDENTIFIERTYPE_REPORT_NR = [NEW] Reportnr.
+ENUM_IDENTIFIERTYPE_REPORT_NR = Report Nr.
 
 ENUM_IDENTIFIERTYPE_SSRN = SSRN
 
@@ -573,7 +573,7 @@ ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PRIVATE = private
 
 ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PUBLIC = public
 
-ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_RESTRICTED = restricted
+ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_AUDIENCE = restricted
 
 ENUM_SELECTMULTIPLEITEMS_DESELECT_ALL = Select none
 
@@ -610,7 +610,7 @@ EasySubmission = Easy Submission
 
 EasySubmissionPage = Easy Submission
 
-EasySubmission_lblImportMetadata = [NEW] Fetch
+EasySubmission_lblImportMetadata = Fetch
 
 EditItemPage = Edit item
 
@@ -930,7 +930,7 @@ List_SelectItem = Select Item
 
 List_ShortView = Collapse all
 
-List_lastItem = (neu) Previous publication
+List_lastItem = Previous publication
 
 List_lblAddToBasket = ADD SELECTED TO BASKET
 
@@ -978,7 +978,7 @@ List_lkShow = Show
 
 List_lkToggleAll = Toggle all
 
-List_nextItem = (neu) Next publication
+List_nextItem = Next publication
 
 LocalTagsPage = Edit Local Tags
 
@@ -2036,20 +2036,20 @@ adv_search_lblChkType_publishedpr = published in print
 
 adv_search_lblChkType_submitted = submitted
 
-adv_search_lblClassification = [NEW] Classification
+adv_search_lblClassification = Classification
 
 #Event
 adv_search_lblEventInvited = Invited
 
-adv_search_lblFile = [NEW] Files
+adv_search_lblFile = Files
 
-adv_search_lblFileAvailable = [NEW] Files
+adv_search_lblFileAvailable = with File(s)
 
-adv_search_lblFileAvailable_NO = [NEW] No
+adv_search_lblFileAvailable_NO = No
 
-adv_search_lblFileAvailable_WHATEVER = [NEW] Whatever
+adv_search_lblFileAvailable_WHATEVER = -
 
-adv_search_lblFileAvailable_YES = [NEW] Yes
+adv_search_lblFileAvailable_YES = Yes
 
 #Date
 adv_search_lblFrom = From
@@ -2061,7 +2061,7 @@ adv_search_lblLanguage = Language of Publication
 #language
 adv_search_lblLanguageTerm = Language of Publication
 
-adv_search_lblLocatorAvailable = [NEW] Locators
+adv_search_lblLocatorAvailable = with Locator(s)
 
 adv_search_lblRgbAny = Any Field
 
@@ -2102,16 +2102,16 @@ adv_search_lblSearchPerson_translator = Translator
 #Generic
 adv_search_lblSearchTerm = Search Term:
 
-adv_search_lblSourceJournal = [NEW] Journal
+adv_search_lblSourceJournal = Journal
 
 adv_search_lblTo = To
 
 #LogicOperator
-adv_search_logicop_and = And
+adv_search_logicop_and = AND
 
-adv_search_logicop_not = Not
+adv_search_logicop_not = NOT
 
-adv_search_logicop_or = Or
+adv_search_logicop_or = OR
 
 #
 # Advanced Search
@@ -2495,7 +2495,7 @@ item_date-submitted = Date submitted
 
 item_degree = Degree
 
-item_film_duration = [NEW] Duration
+item_film_duration = Film duration
 
 item_genre = Genre
 
@@ -2596,9 +2596,9 @@ mpipksDesc = MPI PKS Classification
 
 mpirgDesc = MPI RG Classification
 
-mpis_groupsDesc = [NEW] MPIS Groups
+mpis_groupsDesc = MPIS Groups
 
-mpis_projectsDesc = [NEW] MPIS Projects
+mpis_projectsDesc = MPIS Projects
 
 multipleImport_checkboxRollback = Undo on error
 
@@ -2754,7 +2754,7 @@ styleTheme_lblSpecial = Special
 
 submission_descEasySubmission = Using the easy submission one can enter stepwise information on a publication. At the end of the wizard one can save the item or switch to the full submission mask to add more details.
 
-submission_descImport = [NEW] This method allows you to fetch metadata and full text(s) from other systems like arXiv or PubMed Central.
+submission_descImport = This method allows you to fetch metadata and full text(s) from other systems like arXiv or PubMed Central.
 
 submission_descMultipleImport = This method allows you to import multiple items in a structured format (e.g. EndNote, BibTex).
 
@@ -2772,13 +2772,13 @@ submission_lblSubmissionStart = Submission Method
 
 submission_lnkEasySubmission = EASY
 
-submission_lnkImport = [NEW] FETCH
+submission_lnkImport = FETCH
 
 submission_lnkImportWorkspace = Import Workspace
 
-submission_lnkMultipleImport = [NEW] IMPORT
+submission_lnkMultipleImport = IMPORT
 
-submission_lnkMultipleImportCapitalized = Multiple import
+submission_lnkMultipleImportCapitalized = Import
 
 submission_lnkNewSubmission = FULL
 
