--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -44,7 +44,7 @@ AcceptItem_lnkCancel = Cancelar
 
 AdvancedSearchPage = B\u00FAsqueda avanzada
 
-AdvancedSearchPageOld = [NEW] Advanced Search
+AdvancedSearchPageOld = Advanced Search
 
 AffiliationDetailAlternativeTitle = T\u00EDtulo alternativo
 
@@ -189,7 +189,7 @@ ENUM_ALTERNATIVETITLETYPE_MATHML = MathML
 
 ENUM_ALTERNATIVETITLETYPE_OTHER = Otro
 
-ENUM_ALTERNATIVETITLETYPE_SUBTITLE = [NEW] Subtitle
+ENUM_ALTERNATIVETITLETYPE_SUBTITLE = Subtitle
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
@@ -227,7 +227,7 @@ ENUM_CONTENTCATEGORY_supplementary-material = Material suplementario
 
 ENUM_CONTENTCATEGORY_table-of-contents = \u00CDndice de contenidos 
 
-ENUM_CREATORROLE_ACTOR = [NEW] Actor
+ENUM_CREATORROLE_ACTOR = Actor
 
 ENUM_CREATORROLE_ADVISOR = Asesor 
 
@@ -237,13 +237,13 @@ ENUM_CREATORROLE_ARTIST = Artista
 
 ENUM_CREATORROLE_AUTHOR = Autor 
 
-ENUM_CREATORROLE_CINEMATOGRAPHER = [NEW] Cinematographer
+ENUM_CREATORROLE_CINEMATOGRAPHER = Cinematographer
 
 ENUM_CREATORROLE_COMMENTATOR = Comentarista 
 
 ENUM_CREATORROLE_CONTRIBUTOR = Colaborador 
 
-ENUM_CREATORROLE_DIRECTOR = [NEW] Director
+ENUM_CREATORROLE_DIRECTOR = Director
 
 ENUM_CREATORROLE_EDITOR = Editor
 
@@ -257,11 +257,11 @@ ENUM_CREATORROLE_PAINTER = Pintor
 
 ENUM_CREATORROLE_PHOTOGRAPHER = Fot\u00F3grafo 
 
-ENUM_CREATORROLE_PRODUCER = [NEW] Producer
+ENUM_CREATORROLE_PRODUCER = Producer
 
 ENUM_CREATORROLE_REFEREE = Evaluador
 
-ENUM_CREATORROLE_SOUND_DESIGNER = [NEW] Sound engineer
+ENUM_CREATORROLE_SOUND_DESIGNER = Sound engineer
 
 ENUM_CREATORROLE_TRANSCRIBER = Transcribe 
 
@@ -362,7 +362,7 @@ ENUM_GENRE_ENCYCLOPEDIA = Enciclopedia
 
 ENUM_GENRE_FESTSCHRIFT = Festschrift 
 
-ENUM_GENRE_FILM = [NEW] Pel\u00EDcula
+ENUM_GENRE_FILM = Pel\u00EDcula
 
 ENUM_GENRE_HANDBOOK = Manual 
 
@@ -442,7 +442,7 @@ ENUM_IDENTIFIERTYPE_PMID = PMID
 
 ENUM_IDENTIFIERTYPE_PND = PND
 
-ENUM_IDENTIFIERTYPE_REPORT_NR = [NEW] Reportnr.
+ENUM_IDENTIFIERTYPE_REPORT_NR = Report Nr.
 
 ENUM_IDENTIFIERTYPE_SSRN = SSRN
 
@@ -552,7 +552,7 @@ ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PRIVATE = privado
 
 ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PUBLIC = p\u00FAblico
 
-ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_RESTRICTED = restringido
+ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_AUDIENCE = restringido
 
 ENUM_SELECTMULTIPLEITEMS_DESELECT_ALL = No seleccionar ninguno
 
@@ -589,7 +589,7 @@ EasySubmission = Env\u00EDo f\u00E1cil
 
 EasySubmissionPage = Env\u00EDo f\u00E1cil
 
-EasySubmission_lblImportMetadata = [NEW] Fetch
+EasySubmission_lblImportMetadata = Fetch
 
 EditItemPage = Editar item
 
@@ -921,7 +921,7 @@ List_SelectItem = Seleccionar Item
 
 List_ShortView = Vista abreviada (Todos los Items)
 
-List_lastItem = (neu) Previous publication
+List_lastItem = Previous publication
 
 List_lblAddToBasket = A\u00D1ADIR SELECCIONADOS A LA CESTA
 
@@ -969,7 +969,7 @@ List_lkShow = Mostrar
 
 List_lkToggleAll = Toggle all
 
-List_nextItem = (neu) Next publication
+List_nextItem = Next publication
 
 LocalTagsPage = Editar Etiquetas
 
@@ -1397,7 +1397,7 @@ ViewItemLogPage = Log de Item
 
 ViewItemLog_Header = Log de Item 
 
-ViewItemLog_lblAssignVersionPid = [NEW] Version PID assigned on
+ViewItemLog_lblAssignVersionPid = Version PID assigned on
 
 ViewItemLog_lblComment = Descripci\u00F3n :
 
@@ -1977,20 +1977,20 @@ adv_search_lblChkType_publishedpr = publicado impreso
 
 adv_search_lblChkType_submitted = enviado
 
-adv_search_lblClassification = [NEW] Classification
+adv_search_lblClassification = Classification
 
 #Event
 adv_search_lblEventInvited = Invited
 
-adv_search_lblFile = [NEW] Files
+adv_search_lblFile = Files
 
-adv_search_lblFileAvailable = [NEW] Files
+adv_search_lblFileAvailable = with File(s)
 
-adv_search_lblFileAvailable_NO = [NEW] No
+adv_search_lblFileAvailable_NO = No
 
-adv_search_lblFileAvailable_WHATEVER = [NEW] Whatever
+adv_search_lblFileAvailable_WHATEVER = -
 
-adv_search_lblFileAvailable_YES = [NEW] Yes
+adv_search_lblFileAvailable_YES = Yes
 
 #Date
 adv_search_lblFrom = De
@@ -2000,7 +2000,7 @@ adv_search_lblLanguage = Lengua de Publicaci\u00F3n
 #language
 adv_search_lblLanguageTerm = Lengua de Publicaci\u00F3n
 
-adv_search_lblLocatorAvailable = [NEW] Locators
+adv_search_lblLocatorAvailable = with Locator(s)
 
 adv_search_lblRgbAny = Cualquier campo
 
@@ -2041,16 +2041,16 @@ adv_search_lblSearchPerson_translator = Traductor
 #Generic
 adv_search_lblSearchTerm = T\u00E9rmino de B\u00FAsqueda:
 
-adv_search_lblSourceJournal = [NEW] Journal
+adv_search_lblSourceJournal = Journal
 
 adv_search_lblTo = To
 
 #LogicOperator
-adv_search_logicop_and = And
+adv_search_logicop_and = AND
 
-adv_search_logicop_not = Not
+adv_search_logicop_not = NOT
 
-adv_search_logicop_or = Or
+adv_search_logicop_or = OR
 
 #
 # Advanced Search
@@ -2073,15 +2073,15 @@ all = Seleccionaro todo
 
 cancel = Cancelar
 
-chooseWorkspace_descImportWorkspace = [new] Here you can review and maintain your multiple imports into PubMan. The items included in each import can be deleted or released via batch operations.
+chooseWorkspace_descImportWorkspace = Here you can review and maintain your multiple imports into PubMan. The items included in each import can be deleted or released via batch operations.
 
-chooseWorkspace_descQAWorkspace = [new] In this area, moderators can view and work on all of their institute's publications. You have the opportunity to modify items, to send them back to the depositor for rework or to release them. Publications in status "pending" or "discarded" are not available at this point.
+chooseWorkspace_descQAWorkspace = In this area, moderators can view and work on all of their institute's publications. You have the opportunity to modify items, to send them back to the depositor for rework or to release them. Publications in status "pending" or "discarded" are not available at this point.
 
-chooseWorkspace_descReportWorkspace = [new] Here you can create annual publication reports for your institute. The lists can be exported in HTML or InDesign XML format.
+chooseWorkspace_descReportWorkspace = Here you can create annual publication reports for your institute. The lists can be exported in HTML or InDesign XML format.
 
-chooseWorkspace_descYearbookModeratorWorkspace = [new] Create and edit the MPS yearbook for your institute. A list of possible candidates is created automatically. Datasets can be validated according to the specific yearbook rules of the MPS.
+chooseWorkspace_descYearbookModeratorWorkspace = Create and edit the MPS yearbook for your institute. A list of possible candidates is created automatically. Datasets can be validated according to the specific yearbook rules of the MPS.
 
-chooseWorkspace_descYearbookWorkspace = [new] Create and edit the MPS yearbook for your institute. A list of possible candidates is created automatically. Datasets can be validated according to the specific yearbook rules of the MPS.
+chooseWorkspace_descYearbookWorkspace = Create and edit the MPS yearbook for your institute. A list of possible candidates is created automatically. Datasets can be validated according to the specific yearbook rules of the MPS.
 
 chooseWorkspace_lnkQAWorkspace = QA Workspace
 
@@ -2423,7 +2423,7 @@ item_date-submitted = Fecha de env\u00EDo
 
 item_degree = Grado acad\u00E9mico
 
-item_film_duration = [NEW] Duraci\u00F3n
+item_film_duration = Duraci\u00F3n
 
 item_genre = G\u00E9nero
 
@@ -2505,9 +2505,9 @@ mainMenu_lnkWorkspaces = WORKSPACES
 
 mpirgDesc = MPI RG Classification
 
-mpis_groupsDesc = [NEW] MPIS Groups
+mpis_groupsDesc = MPIS Groups
 
-mpis_projectsDesc = [NEW] MPIS Projects
+mpis_projectsDesc = MPIS Projects
 
 multipleImport_checkboxRollback = Deshacer si da error
 
@@ -2649,7 +2649,7 @@ styleTheme_lblSpecial = Special
 
 submission_descEasySubmission = Usando el m\u00E9todo de env\u00EDo f\u00E1cil se puede a\u00F1adir informaci\u00F3n sobre una publicaci\u00F3n de forma escalonada. Al final del asistente se puede guardar el item o cambiar a la pantalla de env\u00EDo completo y a\u00F1adir m\u00E1s detalles.
 
-submission_descImport = [NEW] Esta funcionalidad le permite traer metadatos y texto completo(s)de otros sistemas como arXiv o PubMed Central.
+submission_descImport = Esta funcionalidad le permite traer metadatos y texto completo(s)de otros sistemas como arXiv o PubMed Central.
 
 submission_descMultipleImport = Esta funcionalidad le permite importar un fichero BibTeX con m\u00FAltiples referencias BibTeX, o references or traer metadatos (y textos completos) de otros sistemas como SPIRES o BioMed Central.
 
@@ -2667,13 +2667,13 @@ submission_lblSubmissionStart = M\u00E9todo de Env\u00EDo
 
 submission_lnkEasySubmission = Env\u00EDo f\u00E1cil
 
-submission_lnkImport = [NEW] FETCH
+submission_lnkImport = FETCH
 
 submission_lnkImportWorkspace = Importar Workspace
 
-submission_lnkMultipleImport = [NEW] Importar items
+submission_lnkMultipleImport = Importar items
 
-submission_lnkMultipleImportCapitalized = Importar m\u00FAltiples items
+submission_lnkMultipleImportCapitalized = Importar items
 
 submission_lnkNewSubmission = Env\u00EDo completo
 
