--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_ja.properties
@@ -44,7 +44,7 @@ AcceptItem_lnkCancel = \u30AD\u30E3\u30F3\u30BB\u30EB
 
 AdvancedSearchPage = \u8A73\u7D30\u691C\u7D22
 
-AdvancedSearchPageOld = [NEW] Advanced Search
+AdvancedSearchPageOld = Advanced Search
 
 AffiliationDetailAlternativeTitle = \u305D\u306E\u4ED6\u306E\u30BF\u30A4\u30C8\u30EB
 
@@ -189,7 +189,7 @@ ENUM_ALTERNATIVETITLETYPE_MATHML = MathML
 
 ENUM_ALTERNATIVETITLETYPE_OTHER = \u305D\u306E\u4ED6
 
-ENUM_ALTERNATIVETITLETYPE_SUBTITLE = [NEW] Subtitle
+ENUM_ALTERNATIVETITLETYPE_SUBTITLE = Subtitle
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
@@ -227,7 +227,7 @@ ENUM_CONTENTCATEGORY_supplementary-material = \u4ED8\u9332\u8CC7\u6599
 
 ENUM_CONTENTCATEGORY_table-of-contents = \u76EE\u6B21
 
-ENUM_CREATORROLE_ACTOR = [NEW] Actor
+ENUM_CREATORROLE_ACTOR = Actor
 
 ENUM_CREATORROLE_ADVISOR = \u5B66\u4F4D\u8AD6\u6587\u4E3B\u67FB
 
@@ -237,13 +237,13 @@ ENUM_CREATORROLE_ARTIST = \u30A2\u30FC\u30C6\u30A3\u30B9\u30C8
 
 ENUM_CREATORROLE_AUTHOR = \u8457\u8005
 
-ENUM_CREATORROLE_CINEMATOGRAPHER = [NEW] Cinematographer
+ENUM_CREATORROLE_CINEMATOGRAPHER = Cinematographer
 
 ENUM_CREATORROLE_COMMENTATOR = \u30B3\u30E1\u30F3\u30C6\u30FC\u30BF\u30FC
 
 ENUM_CREATORROLE_CONTRIBUTOR = \u5BC4\u7A3F\u8005
 
-ENUM_CREATORROLE_DIRECTOR = [NEW] Director
+ENUM_CREATORROLE_DIRECTOR = Director
 
 ENUM_CREATORROLE_EDITOR = \u7DE8\u96C6\u8005
 
@@ -257,11 +257,11 @@ ENUM_CREATORROLE_PAINTER = \u30DA\u30A4\u30F3\u30BF\u30FC
 
 ENUM_CREATORROLE_PHOTOGRAPHER = \u5199\u771F\u5BB6
 
-ENUM_CREATORROLE_PRODUCER = [NEW] Producer
+ENUM_CREATORROLE_PRODUCER = Producer
 
 ENUM_CREATORROLE_REFEREE = \u76E3\u4FEE\u8005
 
-ENUM_CREATORROLE_SOUND_DESIGNER = [NEW] Sound engineer
+ENUM_CREATORROLE_SOUND_DESIGNER = Sound engineer
 
 ENUM_CREATORROLE_TRANSCRIBER = \u8EE2\u8A18\u8005
 
@@ -362,7 +362,7 @@ ENUM_GENRE_ENCYCLOPEDIA = \u767E\u79D1\u4E8B\u5178
 
 ENUM_GENRE_FESTSCHRIFT = \u8A18\u5FF5\u8AD6\u6587\u96C6
 
-ENUM_GENRE_FILM = [NEW] Film
+ENUM_GENRE_FILM = Film
 
 ENUM_GENRE_HANDBOOK = \u30CF\u30F3\u30C9\u30D6\u30C3\u30AF
 
@@ -444,7 +444,7 @@ ENUM_IDENTIFIERTYPE_PMID = PMID
 
 ENUM_IDENTIFIERTYPE_PND = PND
 
-ENUM_IDENTIFIERTYPE_REPORT_NR = [NEW] Reportnr.
+ENUM_IDENTIFIERTYPE_REPORT_NR = Reportnr.
 
 ENUM_IDENTIFIERTYPE_SSRN = SSRN
 
@@ -554,7 +554,7 @@ ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PRIVATE = \u975E\u516C\u958B
 
 ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PUBLIC = \u516C\u958B
 
-ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_RESTRICTED = \u5236\u9650\u4ED8\u304D
+ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_AUDIENCE = \u5236\u9650\u4ED8\u304D
 
 ENUM_SELECTMULTIPLEITEMS_DESELECT_ALL = \u5168\u3066\u306E\u9078\u629E\u3092\u89E3\u9664
 
@@ -591,7 +591,7 @@ EasySubmission = \u7C21\u6613\u767B\u9332
 
 EasySubmissionPage = \u7C21\u6613\u767B\u9332
 
-EasySubmission_lblImportMetadata = [NEW] Fetch
+EasySubmission_lblImportMetadata = Fetch
 
 EditItemPage = \u30A2\u30A4\u30C6\u30E0\u7DE8\u96C6
 
@@ -910,7 +910,7 @@ List_SelectItem = \u30A2\u30A4\u30C6\u30E0\u306E\u9078\u629E
 
 List_ShortView = \u30A2\u30A4\u30C6\u30E0\u306E\u8868\u793A\u9805\u76EE\u3092\u6E1B\u3089\u3059\uFF08\u7C21\u6613\u4E00\u89A7\uFF09
 
-List_lastItem = (neu) Previous publication
+List_lastItem = Previous publication
 
 List_lblAddToBasket = \u9078\u629E\u3057\u305F\u30A2\u30A4\u30C6\u30E0\u3092\u4E00\u6642\u4FDD\u5B58\u3078\u8FFD\u52A0
 
@@ -958,7 +958,7 @@ List_lkShow = \u8868\u793A
 
 List_lkToggleAll = \u5168\u3066\u3092\u9078\u629E
 
-List_nextItem = (neu) Next publication
+List_nextItem = Next publication
 
 LocalTagsPage = \u30BF\u30B0\u7DE8\u96C6
 
@@ -2017,18 +2017,18 @@ adv_search_lblClassification = \u5206\u985E
 #Event
 adv_search_lblEventInvited = \u62DB\u5F85\u8B1B\u6F14
 
-adv_search_lblFile = [NEW] Files
+adv_search_lblFile = Files
 
-adv_search_lblFileAvailable = [NEW] Files
+adv_search_lblFileAvailable = with File(s)
 
-adv_search_lblFileAvailable_NO = [NEW] No
+adv_search_lblFileAvailable_NO = No
 
-adv_search_lblFileAvailable_WHATEVER = [NEW] Whatever
+adv_search_lblFileAvailable_WHATEVER = -
 
-adv_search_lblFileAvailable_YES = [NEW] Yes
+adv_search_lblFileAvailable_YES = Yes
 
 #Date
-adv_search_lblFrom = \u958B\u59CB\u65E5(YYYY-MM-DD)
+adv_search_lblFrom = \u958B\u59CB\u65E5
 
 adv_search_lblInclHistory = \u65E7\u540D\u30FB\u65B0\u540D\u3092\u542B\u3080
 
@@ -2037,7 +2037,7 @@ adv_search_lblLanguage = \u8CC7\u6599\u306E\u8A00\u8A9E
 #language
 adv_search_lblLanguageTerm = \u8A00\u8A9E
 
-adv_search_lblLocatorAvailable = [NEW] Locators
+adv_search_lblLocatorAvailable = with Locator(s)
 
 adv_search_lblRgbAny = \u5168\u9805\u76EE
 
@@ -2078,9 +2078,9 @@ adv_search_lblSearchPerson_translator = \u7FFB\u8A33\u8005
 #Generic
 adv_search_lblSearchTerm = \u691C\u7D22\u8A9E:
 
-adv_search_lblSourceJournal = [NEW] Journal
+adv_search_lblSourceJournal = Journal
 
-adv_search_lblTo = \u7D42\u4E86\u65E5 \uFF08\u7701\u7565\u6642\u306F\u4ECA\u65E5\uFF09
+adv_search_lblTo = \u7D42\u4E86\u65E5
 
 #LogicOperator
 adv_search_logicop_and = AND
@@ -2114,11 +2114,11 @@ chooseWorkspace_descImportWorkspace = PubMan\u3078\u306E\u4E00\u62EC\u767B\u9332
 
 chooseWorkspace_descQAWorkspace = \u767B\u9332\u30A2\u30A4\u30C6\u30E0\u3092\u7DE8\u96C6\u3001\u78BA\u8A8D\u3067\u304D\u307E\u3059\u3002\u7BA1\u7406\u8005\u767B\u9332\u3055\u308C\u3066\u3044\u308B\u5834\u5408\u306F\u3001\u767B\u9332\u8005\u306B\u5DEE\u3057\u623B\u3057\u305F\u308A\u3001\u516C\u958B\u51E6\u7406\u3092\u884C\u3046\u3053\u3068\u3082\u53EF\u80FD\u307E\u3059\u3002
 
-chooseWorkspace_descReportWorkspace = [new] Here you can create annual publication reports for your institute. The lists can be exported in HTML or InDesign XML format.
+chooseWorkspace_descReportWorkspace = Here you can create annual publication reports for your institute. The lists can be exported in HTML or InDesign XML format.
 
-chooseWorkspace_descYearbookModeratorWorkspace = [new] Create and edit the MPS yearbook for your institute. A list of possible candidates is created automatically. Datasets can be validated according to the specific yearbook rules of the MPS.
+chooseWorkspace_descYearbookModeratorWorkspace = Create and edit the MPS yearbook for your institute. A list of possible candidates is created automatically. Datasets can be validated according to the specific yearbook rules of the MPS.
 
-chooseWorkspace_descYearbookWorkspace = [new] Create and edit the MPS yearbook for your institute. A list of possible candidates is created automatically. Datasets can be validated according to the specific yearbook rules of the MPS.
+chooseWorkspace_descYearbookWorkspace = Create and edit the MPS yearbook for your institute. A list of possible candidates is created automatically. Datasets can be validated according to the specific yearbook rules of the MPS.
 
 chooseWorkspace_lnkQAWorkspace = \u767B\u9332\u30A2\u30A4\u30C6\u30E0\u7BA1\u7406\u753B\u9762
 
@@ -2462,7 +2462,7 @@ item_date-submitted = \u6295\u7A3F\u65E5
 
 item_degree = \u5B66\u4F4D
 
-item_film_duration = [NEW] Duration
+item_film_duration = Film duration
 
 item_genre = \u8CC7\u6599\u7A2E\u5225
 
@@ -2560,9 +2560,9 @@ mpipksDesc = MPI PKS\u5206\u985E\u8868 (MPI PKS Classification)
 
 mpirgDesc = MPI RG Classification
 
-mpis_groupsDesc = [NEW] MPIS Groups
+mpis_groupsDesc = MPIS Groups
 
-mpis_projectsDesc = [NEW] MPIS Projects
+mpis_projectsDesc = MPIS Projects
 
 multipleImport_checkboxRollback = \u30A8\u30E9\u30FC\u6642\u306B\u51E6\u7406\u3092\u5DEE\u3057\u623B\u3059
 
@@ -2736,7 +2736,7 @@ submission_lblSubmissionStart = \u767B\u9332\u958B\u59CB
 
 submission_lnkEasySubmission = \u7C21\u6613\u767B\u9332
 
-submission_lnkImport = [NEW] FETCH
+submission_lnkImport = FETCH
 
 submission_lnkImportWorkspace = \u4E00\u62EC\u767B\u9332\u72B6\u6CC1\u4E00\u89A7
 
