duplicate label restricted added, because the implementation takes both audience and restricted for components
Former-commit-id: 5741065dad10e184fc9a6bfbe9761fc1cda83af3

--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -575,6 +575,8 @@ ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PUBLIC = \u00F6ffentlich
 
 ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_AUDIENCE = eingeschr\u00E4nkt
 
+ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_RESTRICTED = eingeschr\u00E4nkt
+
 ENUM_SELECTMULTIPLEITEMS_DESELECT_ALL = Keine ausw\u00E4hlen
 
 ENUM_SELECTMULTIPLEITEMS_SELECT_ALL = Alle ausw\u00E4hlen
