--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -575,6 +575,8 @@ ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PUBLIC = public
 
 ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_AUDIENCE = restricted
 
+ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_RESTRICTED = restricted
+
 ENUM_SELECTMULTIPLEITEMS_DESELECT_ALL = Select none
 
 ENUM_SELECTMULTIPLEITEMS_SELECT_ALL = Select all
