--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
@@ -556,6 +556,8 @@ ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PUBLIC = \u516C\u958B
 
 ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_AUDIENCE = \u5236\u9650\u4ED8\u304D
 
+ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_RESTRICTED = \u5236\u9650\u4ED8\u304D
+
 ENUM_SELECTMULTIPLEITEMS_DESELECT_ALL = \u5168\u3066\u306E\u9078\u629E\u3092\u89E3\u9664
 
 ENUM_SELECTMULTIPLEITEMS_SELECT_ALL = \u5168\u3066\u3092\u9078\u629E
