--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_es.properties
@@ -554,6 +554,8 @@ ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PUBLIC = p\u00FAblico
 
 ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_AUDIENCE = restringido
 
+ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_RESTRICTED = restringido
+
 ENUM_SELECTMULTIPLEITEMS_DESELECT_ALL = No seleccionar ninguno
 
 ENUM_SELECTMULTIPLEITEMS_SELECT_ALL = Seleccionar todos
